# src/pipe/core/models/procedure.py
@@ -1,0 +1,6 @@
+from pydantic import BaseModel
+
+
+class ProcedureOption(BaseModel):
+    label: str
+    value: str
